--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
     "simple-keyboard": "^3.7.5",
     "vue": "^3.2.13"
