--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
     "simple-keyboard": "^3.7.5",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
