--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "lint-staged": "^14.0.1",
     "prettier": "^2.4.1"
   },
